# self-changer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.github  Dockerfile.simple  GITHUB_ACTIONS_SETUP.md  README.md  docker-compose.yml  fly.toml  leptos.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  security-quality.yml
app/: Cargo.toml
app/src/: api.rs  api_client.rs  css_sanitizer.rs  lib.rs
app/src/pages/: chat_page.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
end2end/: package-lock.json  package.json  playwright.config.ts
end2end/playwright-report/: index.html
end2end/tests/: example.spec.ts
frontend/: Cargo.toml
server/: Cargo.toml
server/src/: api_handler.rs  lib.rs  main.rs
style/: main.css
