[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
dotenvy.workspace = true

google-ai-rs = "0.1.3"
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json"] }

[features]
# appクレートがserverクレートをssr機能付きで参照できるようにする
ssr = ["leptos/ssr"]